# forge

./: .gitignore  CLAUDE.md  README.md  flake.nix
cli/: Cargo.nix  Cargo.toml  README.md  deploy.yaml.example
cli/src/: chart_dependencies.rs  chart_listing.rs  cis_k8s_pass_rate.rs  cli.rs  cloudflare.rs  compliance_dimensions.rs  cosign.rs  deployment_manifest.rs  duration.rs  error.rs  flux_source_verification.rs  git.rs  git_signature.rs  helm_lint.rs  helm_provenance.rs  helm_release_signature.rs  k8s.rs  kensa_policy.rs  main.rs  network_policy_admission.rs  nix.rs  nix_hooks.rs  nix_reproducibility.rs  observability.rs  oci_architecture.rs  oci_manifest.rs  openpgp_signature.rs  path_builder.rs  pod_health.rs  pod_listing.rs  probe_outcome.rs  repo.rs  retry.rs  security_scan.rs  store_path.rs  test_support.rs  tools.rs  tree_listing.rs  ui.rs  version.rs
cli/src/commands/: attestation.rs  bootstrap.rs  build.rs  codegen.rs  codegen_validation.rs  comprehensive_release.rs  crossplane.rs  dashboards.rs  deploy.rs  developer_tools.rs  e2e.rs  federation.rs  federation_tests.rs  flux.rs  frontend_validation.rs  gem.rs  github_runner_ci.rs  helm.rs  image_release.rs  infra.rs  integration_tests.rs  kenshi.rs  kenshi_agent.rs  local.rs  migration_new.rs  migration_validation.rs  migrations.rs  mod.rs  nix_builder.rs  pangea.rs  pangea_infra.rs  post_deploy_verification.rs  prerelease.rs  product_release.rs  push.rs  rebac_validation.rs  release_commit.rs  rollback.rs  rollout.rs  rust_service.rs  (+15 more)
cli/src/config/: deployment.rs  federation.rs  global.rs  kubernetes.rs  migration.rs  mod.rs  prerelease.rs  product.rs  product_release.rs  registry.rs  release.rs  service.rs
cli/src/domain/: migration.rs  mod.rs  release.rs  service.rs
cli/src/infrastructure/: attic.rs  docker.rs  git.rs  kubectl.rs  mod.rs  registry.rs  release_tracker.rs
cli/src/services/: migration_service.rs  mod.rs  release_service.rs
lib/: attic.nix  error-reporter.nix  errors.nix  flake-inputs.nix  performance.nix  platform.nix
provision/attic/: Cargo.toml  README.md  config.example.yaml
provision/attic/src/: main.rs
provision/forge-provision/: BUILD.md  Cargo.build-spec.json  Cargo.nix  Cargo.toml  README.md  snippet
provision/forge-provision/examples/: attic-cache-config.yaml  email-db-config.yaml  postgres-basic-config.yaml  postgres-with-cdc-config.yaml
provision/forge-provision/src/: attic.rs  config.rs  main.rs  nix_builder.rs  postgres.rs  validation.rs
provision/postgres/: Cargo.toml  README.md  config.example.yaml
provision/postgres/src/: main.rs
