[package]
name = "forge-provision"
version = "0.1.0"
edition = "2021"
authors = ["Pleme Team"]
description = "Production-ready infrastructure provisioning tool for PostgreSQL and Attic binary caches"
license = "MIT"
repository = "https://github.com/pleme-io/forge"

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
anyhow = "1.0"
tokio = { version = "1.42", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
toml = "0.8"
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres"] }

[[bin]]
name = "forge-provision"
path = "src/main.rs"

[[bin]]
name = "nix-builder-entrypoint"
path = "src/bin/nix_builder_entrypoint.rs"
